--- a/index.html
+++ b/index.html
@@ -54,31 +54,32 @@
                     <input type="text" id="initials" name="initials">
                 </div>
             </section>
-
             <!-- High Score component -->
             <section class="row">
-                <div class="col d-flex flex-column">
+                <div class="col d-flex flex-column justify-content-center align-items-center">
                     <h2 class="text-center">High Scores</h2>
-                    <table class="table table-striped table-hover">
+                    <table class="table table-striped table-hover w-50">
                         <thead class="thead-dark">
                             <tr>
+                                <th scope="col">#</th>
                                 <th scope="col">Name</th>
                                 <th scope="col">Score</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">RHM</th>
+                                <th scope="row">1</th>
+                                <td>RHM</td>
                                 <td>100</td>
                             </tr>
                             <tr>
-
-                                <th scope="row">AZ</th>
+                                <th scope="row">2</th>
+                                <td>AZ</td>
                                 <td>90</td>
                             </tr>
                             <tr>
-
-                                <th scope="row">JK</th>
+                                <th scope="row">3</th>
+                                <td>JK</td>
                                 <td>80</td>
                             </tr>
                         </tbody>
