Add code to reuse Question component

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
             <h3 id="time-remaining">Time Remaining: </h3>
             <section id="questions" class="card row my-4">
                 <div class="card-body">
-                    <h5 class="card-title">Question 1</h5>
-                    <p class="card-text">Which of the following is a programming language? Like an actual programming
-                        language</p>
+                    <h5 class="card-title"></h5>
+                    <p class="card-text"></p>
                     <div class="d-flex flex-column">
-                        <a href="#" class="btn btn-primary my-1 text-left" style="width: 200px">A. JavaScript</a>
-                        <a href="#" class="btn btn-primary my-1 text-left" style="width: 200px">B. HTML</a>
-                        <a href="#" class="btn btn-primary my-1 text-left" style="width: 200px">C. CSS</a>
-                        <a href="#" class="btn btn-primary my-1 text-left" style="width: 200px">D. jquery</a>
+                        <a href="#" id="a" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
+                        <a href="#" id="b" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
+                        <a href="#" id="c" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
+                        <a href="#" id="d" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
                     </div>
                 </div>
             </section>
