Add logic to check for correct answer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="card-body">
                     <h5 class="card-title"></h5>
                     <p class="card-text"></p>
-                    <div class="d-flex flex-column">
+                    <div id="answer-choices" class="d-flex flex-column">
                         <a href="#" id="a" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
                         <a href="#" id="b" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
                         <a href="#" id="c" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
