--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
                 <div class="col d-flex flex-column justify-content-center align-items-center">
                     <h2>All Done!</h2>
                     <p>Here is your score: </p>
-                    <h2>100</h2>
-                    <label for="initials">Enter your initials: </label>
-                    <input type="text" id="initials" name="initials" class="my-2">
+                    <h2 id="score">100</h2>
+                    <div class="input-group mb-3 w-25">
+                        <input id="player-name" maxlength="3" type="text" class="form-control" placeholder="Enter your initials" aria-label="Enter your Initials">
+                        <div class="input-group-append">
+                            <button id="submit-btn" class="btn btn-outline-secondary" type="button">Submit</button>
+                        </div>
+                    </div>
                     <div class="d-flex flex-row justify-content-between w-50 my-2">
                         <button class="start-btn btn btn-primary">Play again</a>
                         <button class="highscores-btn btn btn-secondary">Highscores</a>
@@ -73,23 +77,8 @@
                                 <th scope="col">Score</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>RHM</td>
-                                <td>100</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>AZ</td>
-                                <td>90</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td>JK</td>
-                                <td>80</td>
-                            </tr>
-                        </tbody>
+                        <!-- Highscores will be inserted here -->
+                        <tbody></tbody>
                     </table>
                     <div class="d-flex flex-row justify-content-between w-50">
                         <button class="home-btn btn btn-primary">Home</a>
