Add feedback for answer, one second delay

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                         <a href="#" id="c" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
                         <a href="#" id="d" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
                     </div>
+                    <!-- Correct answer alert -->
+                    <div class="alert alert-success" role="alert">
+                        Correct
+                    </div>
+                    <!-- Wrong answer alert -->
+                    <div class="alert alert-danger" role="alert">
+                        Incorrect
+                    </div>
                 </div>
             </section>
             <!-- All Done component -->
