--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </header>
         <main id="main-container" class="container">
             <!-- Welcome Component -->
-            <section id="welcome" class="row my-4">
-                <div class="col d-flex flex-column justify-content-center align-items-center">
+            <section id="welcome" class="row border rounded my-4">
+                <div class="col d-flex flex-column justify-content-center align-items-center my-2">
                     <h2>Welcome to Coding Quiz! Test your knowledge</h2>
                     <p>
                         Test your coding knowledge against your friends, take this quiz and find out how smart you are.
@@ -34,16 +34,16 @@
                 </div>
             </section>
             <!-- Question Component -->
-            <h3 id="time-remaining">Time Remaining: </h3>
             <section id="questions" class="card row my-4">
                 <div class="card-body">
-                    <h5 class="card-title"></h5>
-                    <p class="card-text"></p>
+                    <h3 id="time-remaining" class="my-2">Time Remaining: </h3>
+                    <h5 class="card-title">Question 0 / 0</h5>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque maiores beatae.</p>
                     <div id="answer-choices" class="d-flex flex-column">
-                        <a href="#" id="a" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
-                        <a href="#" id="b" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
-                        <a href="#" id="c" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
-                        <a href="#" id="d" class="btn btn-primary my-1 text-left" style="width: 200px"></a>
+                        <a href="#" id="a" class="btn btn-primary my-1 text-left" style="width: 200px">Javascript</a>
+                        <a href="#" id="b" class="btn btn-primary my-1 text-left" style="width: 200px">HTML</a>
+                        <a href="#" id="c" class="btn btn-primary my-1 text-left" style="width: 200px">CSS</a>
+                        <a href="#" id="d" class="btn btn-primary my-1 text-left" style="width: 200px">React</a>
                     </div>
                     <!-- Correct answer alert -->
                     <div class="alert alert-success" role="alert">
@@ -56,8 +56,8 @@
                 </div>
             </section>
             <!-- All Done component -->
-            <section id="done" class="row my-4">
-                <div class="col d-flex flex-column justify-content-center align-items-center">
+            <section id="done" class="row border rounded my-4">
+                <div class="col d-flex flex-column justify-content-center align-items-center my-2">
                     <h2>All Done!</h2>
                     <p>Here is your score: </p>
                     <h2 id="score">100</h2>
@@ -74,9 +74,10 @@
                 </div>
             </section>
             <!-- High Score component -->
-            <section id="highscores" class="row my-4">
-                <div class="col d-flex flex-column justify-content-center align-items-center">
+            <section id="highscores" class="row border rounded my-4">
+                <div class="col d-flex flex-column justify-content-center align-items-center my-2">
                     <h2 class="text-center">High Scores</h2>
+                    <!-- Highscores table -->
                     <table class="table table-striped table-hover w-50">
                         <thead class="thead-dark">
                             <tr>
