--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>Code Quiz</title>
 </head>
 
-<body>
+<body class="bg-dark">
     <div class="container">
         <header>
 
         </header>
-        <main id="main-container" class="container">
+        <main id="main-container" class="container bg-dark ">
             <!-- Welcome Component -->
-            <section id="welcome" class="row border rounded my-4">
+            <section id="welcome" class="bg-light row border rounded my-4">
                 <div class="col d-flex flex-column justify-content-center align-items-center my-2">
                     <h2>Welcome to Coding Quiz! Test your knowledge</h2>
                     <p>
@@ -34,47 +34,49 @@
                 </div>
             </section>
             <!-- Question Component -->
-            <section id="questions" class="card row my-4">
-                <div class="card-body">
+            <section id="questions" class="bg-light row border rounded my-4">
+                <div class="col d-flex flex-column">
                     <h3 id="time-remaining" class="my-2">Time Remaining: </h3>
-                    <h5 class="card-title">Question 0 / 0</h5>
-                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque maiores beatae.</p>
-                    <div id="answer-choices" class="d-flex flex-column">
+                    <h5 id="progress">Question 0 / 0</h5>
+                    <p id="question-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque maiores
+                        beatae.</p>
+                    <div id="answer-choices" class="d-flex flex-column my-2">
                         <a href="#" id="a" class="btn btn-primary my-1 text-left" style="width: 200px">Javascript</a>
                         <a href="#" id="b" class="btn btn-primary my-1 text-left" style="width: 200px">HTML</a>
                         <a href="#" id="c" class="btn btn-primary my-1 text-left" style="width: 200px">CSS</a>
                         <a href="#" id="d" class="btn btn-primary my-1 text-left" style="width: 200px">React</a>
                     </div>
                     <!-- Correct answer alert -->
-                    <div class="alert alert-success" role="alert">
+                    <div class="alert alert-success my-2" role="alert">
                         Correct
                     </div>
                     <!-- Wrong answer alert -->
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert alert-danger my-2" role="alert">
                         Incorrect
                     </div>
                 </div>
             </section>
             <!-- All Done component -->
-            <section id="done" class="row border rounded my-4">
+            <section id="done" class="bg-light row border rounded my-4">
                 <div class="col d-flex flex-column justify-content-center align-items-center my-2">
                     <h2>All Done!</h2>
                     <p>Here is your score: </p>
                     <h2 id="score">100</h2>
                     <div class="input-group mb-3 w-25">
-                        <input id="player-name" maxlength="3" type="text" class="form-control" placeholder="Enter your initials" aria-label="Enter your Initials">
+                        <input id="player-name" maxlength="3" type="text" class="form-control"
+                            placeholder="Enter your initials" aria-label="Enter your Initials">
                         <div class="input-group-append">
                             <button id="submit-btn" class="btn btn-outline-secondary" type="button">Submit</button>
                         </div>
                     </div>
                     <div class="d-flex flex-row justify-content-between w-50 my-2">
                         <button class="start-btn btn btn-primary">Play again</a>
-                        <button class="highscores-btn btn btn-secondary">Highscores</a>
+                            <button class="highscores-btn btn btn-secondary">Highscores</a>
                     </div>
                 </div>
             </section>
             <!-- High Score component -->
-            <section id="highscores" class="row border rounded my-4">
+            <section id="highscores" class="bg-light row border rounded my-4">
                 <div class="col d-flex flex-column justify-content-center align-items-center my-2">
                     <h2 class="text-center">High Scores</h2>
                     <!-- Highscores table -->
@@ -91,7 +93,7 @@
                     </table>
                     <div class="d-flex flex-row justify-content-between w-50">
                         <button class="home-btn btn btn-primary">Home</a>
-                        <button class="reset-highscores-btn btn btn-secondary">Reset Highscores</a>
+                            <button class="reset-highscores-btn btn btn-secondary">Reset Highscores</a>
                     </div>
                 </div>
             </section>
