Rename id caused bug for some reason when deployed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section id="questions" class="bg-light row border rounded my-4">
                 <div class="col d-flex flex-column">
                     <h3 id="time-remaining" class="my-2">Time Remaining: </h3>
-                    <h5 id="progress">Question 0 / 0</h5>
+                    <h5 id="quiz-progress">Question 0 / 0</h5>
                     <p id="question-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque maiores
                         beatae.</p>
                     <div id="answer-choices" class="d-flex flex-column my-2">
